--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "multer": "^2.0.0",
     "mysql2": "^3.14.1",
     "node": "file:",
     "sequelize": "^6.37.7",
