--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^2.0.0",
     "mysql2": "^3.14.1",
     "node": "file:",
+    "node-cron": "^4.0.6",
     "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
